tests/test_typing/bad/output/err5.catala_en.err
[ERROR] Error during typechecking, incompatible types:
--> integer
--> Structure

Error coming from typechecking the following expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
7 |     Structure { -- i: 4 -- e: y };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  + 

Type integer coming from expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
8 |     1040
  |     ^^^^
  + 

Type Structure coming from expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
7 |     Structure { -- i: 4 -- e: y };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  + 
